src/pages/SelectedProduct.module.css
.container {
  margin: 0 30px;
  height: 75vh;
  display: flex;
  align-items: center;
  gap: 80px;
}

.img {
  width: 200px;
  margin-bottom: 20px;
}

.description {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.description header {
  display: flex;
  justify-content: space-between;
  gap: 40px;
}

.description h2 {
  width: 50vw;
}

.quantity {
  width: 120px;
}

.quantity button,
.addToCart {
  font-weight: bold;
  color: white;
  background-color: var(--color-light--2);
  border: none;
  padding: 5px 10px;
}

.description span {
  padding: 0 10px;
}

.category {
  position: absolute;
  left: 740px;
  top: 13px;
  display: flex;
  align-items: center;
  gap: 10px;
  text-transform: capitalize;
}

.category p {
  width: 200px;
}

.descriptionText {
  width: 65vw !important;
  text-align: justify !important;
}

